--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/animate.css">
 
     <link href="css/style.css" rel="stylesheet">
 
@@ -72,7 +73,7 @@
           <button type="button" class="btn btn-outline-secondary w-23 fs-5">Get in Touch</button>
         </div>
         <div class="col-md-4 text-center p-md-5">
-          <i class="fa-solid fa-signal fa-10x mytextcolor"></i>
+          <i class="fa-solid fa-signal fa-10x mytextcolor wow bounceInUp"></i>
         </div>
       </div>
     </div>
@@ -82,7 +83,7 @@
      <div class="container-fluid p-md-5 p-3 bg-light">
       <div class="row">
         <div class="col-md-4 text-center p-md-5">
-          <i class="fa-solid fa-earth-americas fa-10x mytextcolor"></i>
+          <i class="fa-solid fa-earth-americas fa-10x mytextcolor wow bounceInUp"></i>
         </div>
         <div class="col-md-8">
           <h2 class="py-md-3 py-1 ">OUR VALUES</h2>
@@ -99,7 +100,7 @@
     <div class="container-fluid p-md-5 p-3 text-center" id="services" >
       <h3 class="p-3">SERVICES</h3>
       <p class="py-3 fs-5">What we offer</p>
-      <div class="row text-center">
+      <div class="row text-center wow bounceInUp">
         <div class="col-lg-4 my-3">
           <i class="fa-solid fa-power-off fa-3x mytextcolor"></i>
           <p class="py-3 fs-4">POWER</p>
@@ -138,7 +139,7 @@
     <div class="container-fluid p-md-5 p-3 text-center bg-light" id="portofolio">
       <h3 class="p-3">PORTFOLIO</h3>
       <p class="py-3 fs-5">What we have created</p>
-        <div class="card-group text-center text-muted">
+        <div class="card-group text-center text-muted wow bounceInUp">
           <div class="card m-3">
             <img src="imges/paris.jpg" class="card-img-top">
             <div class="card-body">
@@ -213,7 +214,7 @@
         <h3 class="p-3">PRICING</h3>
         <p class="py-3 fs-5">Choose a payment plan that works for you</p>
           <div class="row sliim sliddeane wow bounceInUp"data-wow-duration="2s">
-            <div class="col-sm-4 col-xs-12 col-lg-4 myprices">
+            <div class="col-sm-4 col-xs-12 col-lg-4 myprices mb-5">
               <div class="panel panel-default text-center">
                 <div class="panel-heading p-4 text-white w">
                   <h1>Basic</h1>
@@ -234,7 +235,7 @@
               </div>
               </div>      
             </div>     
-            <div class="col-sm-4 col-lg-4 col-xs-12 myprices ">
+            <div class="col-sm-4 col-lg-4 col-xs-12 myprices mb-5">
               <div class="panel panel-default text-center">
                 <div class="panel-heading p-4 text-white">
                   <h1>Pro</h1>
@@ -255,7 +256,7 @@
              </div>
               </div>      
             </div>       
-            <div class="col-sm-4 col-xs-12 col-lg-4 myprices">
+            <div class="col-sm-4 col-xs-12 col-lg-4 myprices mb-5">
               <div class="panel panel-default text-center">
                 <div class="panel-heading p-4 text-white">
                   <h1>Premium</h1>
@@ -279,9 +280,8 @@
           </div>
         </div>
     <!--end pricing-->
-
     <!--start contact-->
-    <div class="container-fluid p-md-5 p-3 bg-light" id="contact">
+    <div class="container-fluid p-md-5 p-3 bg-light " id="contact">
       <h2 class="p-3 text-center h2font">CONTACT</h2>
       <div class="row">
         <div class="col-md-6 p-3 text-muted">
@@ -290,12 +290,12 @@
           <p> <i class="fa-solid fa-mobile-screen-button"></i> +00 1515151515</p>
           <p> <i class="fa-solid fa-envelope"></i> myemail@something.com</p>
         </div>
-        <div class="col-md-6 p-3">
+        <div class="col-md-6 p-3 wow bounceInUp">
           <div class="row mb-3">
-            <div class="col-md-6">
+            <div class="col-md-6 mb-3">
               <input type="text" class="form-control" placeholder="Name" aria-label="First name">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mb-3">
               <input type="text" class="form-control" placeholder="Email" aria-label="Last name">
             </div>
           </div>
@@ -315,5 +315,9 @@
     <!--end of footer-->
 
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
   </body>
 </html>
